# fishsense-api

./: .gitignore  CHANGELOG.md  Dockerfile  alembic.ini  flake.nix  pyproject.toml  settings.toml
fishsense_api/: __init__.py  config.py  database.py  server.py
fishsense_api/controllers/: __init__.py  camera_controller.py  dive_controller.py  image_controller.py  label_controller.py
fishsense_api/models/: camera_intrinsics.py  dive.py  dive_frame_cluster.py  laser_label.py  species_label.py
src/fishsense_api/: __version__.py  database.py
src/fishsense_api/alembic/versions/: 504cfd509f5f_add_species_label_project_id.py
src/fishsense_api/controllers/: __init__.py  camera_controller.py  dive_controller.py  dive_slate_controller.py  fish_controller.py  image_controller.py  label_controller.py  user_controller.py
src/fishsense_api/models/: dive.py  dive_frame_cluster.py  dive_slate.py  dive_slate_label.py  fish.py  head_tail_label.py  label_studio_project.py  laser_extrinsics.py  laser_label.py  measurement.py  model_base.py  species.py  species_label.py  user.py
