[project]
name = "fishsense-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dynaconf>=3.2.11",
    "fastapi>=0.119.0",
    "label-studio-sdk>=2.0.11",
    "psycopg[binary]>=3.2.10",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "black>=25.9.0",
]
